--- a/index.html
+++ b/index.html
@@ -29,7 +29,56 @@
             <h3></h3>
         </div>
         <div class="outer-box">
-            
+            <div class="inner-column">
+                <div class="call-um">
+                    C
+                </div>
+                <div class="cheese-box c-col" id="C1"></div>
+                <div class="cheese-box c-col" id="C2"></div>
+                <div class="cheese-box c-col" id="C3"></div>
+                <div class="cheese-box c-col" id="C4"></div>
+                <div class="cheese-box c-col" id="C5"></div>
+            </div>
+            <div class="inner-column">
+                <div class="call-um">
+                    H
+                </div>
+                <div class="cheese-box h-col" id="H1"></div>
+                <div class="cheese-box h-col" id="H2"></div>
+                <div class="cheese-box h-col" id="H3"></div>
+                <div class="cheese-box h-col" id="H4"></div>
+                <div class="cheese-box h-col" id="H5"></div>
+            </div>
+            <div class="inner-column">
+                <div class="call-um">
+                    E
+                </div>
+                <div class="cheese-box e-col" id="E1"></div>
+                <div class="cheese-box e-col" id="E2"></div>
+                <div class="cheese-box e-col" id="E3"></div>
+                <div class="cheese-box e-col" id="E4"></div>
+                <div class="cheese-box e-col" id="E5"></div>
+            </div>
+            <div class="inner-column">
+                <div class="call-um">
+                    Z
+                </div>
+                <div class="cheese-box z-col" id="Z1"></div>
+                <div class="cheese-box z-col" id="Z2"></div>
+                <div class="cheese-box z-col" id="Z3"></div>
+                <div class="cheese-box z-col" id="Z4"></div>
+                <div class="cheese-box z-col" id="Z5"></div>
+            </div>
+            <div class="inner-column">
+                <div class="call-um">
+                    Y
+                </div>
+                <div class="cheese-box y-col" id="Y1"></div>
+                <div class="cheese-box y-col" id="Y2"></div>
+                <div class="cheese-box y-col" id="Y3"></div>
+                <div class="cheese-box y-col" id="Y4"></div>
+                <div class="cheese-box y-col" id="Y5"></div>
+            </div>
 
         </div>
         <div class="game-card-footer">
