--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
             <h3></h3>
         </div>
         <div class="outer-box">
+            <script>
+                function x(){
+                    let innerColumn = buildElem('div', '', 'inner-column');
+                    console.log(innerColumn);
+                }
+
+            </script>
     
             <div class="inner-column">
                 <div class="call-um">
